fixed list getting cut off

--- a/static/style.css
+++ b/static/style.css
@@ -25,5 +25,5 @@ pre {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: auto;
 }
